Fix delete button mobile background color

--- a/src/components/TodoItem/TodoItem.scss
+++ b/src/components/TodoItem/TodoItem.scss
@@ -93,6 +93,7 @@ label:hover:before {
   height: 40px;
 
   font-size: 1.3em;
+  background-color: white;
   color: rgb(95, 95, 44);
 
   margin-left: 100px;
